# lampkitctl

./: LICENSE  README.md  main.py  pyproject.toml
docs/: index.html  lampkitctl.html  search.js
docs/lampkitctl/: cli.html  (+1 more)
lampkitctl/: __init__.py  __main__.py  apache_vhosts.py  auth_cache.py  cli.py  db_detect.py  db_introspect.py  db_ops.py  elevate.py  launcher.py  menu.py  packages.py  preflight.py  preflight_locks.py  system_ops.py  utils.py  wp_ops.py
scripts/: install-lampkitctl.sh
test/: test_utils.py
tests/: conftest.py  test_apache_vhosts_parsing.py  test_auth_cache.py  test_cli.py  test_cli_guards.py  test_cli_help.py  test_cli_install_launcher.py  test_cli_site_root_guard.py  test_colors.py  test_db_auth_modes.py  test_db_autodetect_dpkg.py  test_db_autodetect_version.py  test_db_list_auth_flow.py  test_db_list_cache.py  test_db_list_env_var.py  test_db_list_fallbacks.py  test_db_list_filters_system.py  test_db_list_sudo_fallbacks.py  test_db_ops.py  test_db_set_root_password_mariadb.py  test_db_set_root_password_mysql.py  test_db_user_list_fallbacks.py  test_db_user_list_filters.py  test_elevate.py  test_hosts_write.py  test_install_flow_root_pass.py  test_install_lamp_cli.py  test_install_lamp_cli_prompt_flags.py  test_install_lamp_stack.py  test_launcher.py  test_list_sites_empty_state.py  test_list_sites_framed_block.py  test_list_sites_table.py  test_locks_detect.py  test_menu.py  test_menu_asks_engine_when_none.py  test_menu_create_site_preflight.py  test_menu_db_choice.py  test_menu_db_picker_prefill.py  test_menu_db_picker_preselect.py  (+34 more)
(+1 files in other folders)
